<resources>
    <string name="app_name">Driver</string>
    <!-- SPLASH SCREEN STRINGS -->
    <string name="text_splash_screen_hello">Hello world!</string>


    <!-- NAVIGATION STRINGS -->
    <string name="text_nav_activation">Activation</string>
    <string name="text_nav_rounds">Reservations</string>
    <string name="text_nav_notifications">Notifications</string>
    <string name="text_nav_history">History</string>


    <!-- CONTENT DESCRIPTIONS STRINGS -->
    <string name="text_content_description_ic_navigation">Es un icono de navegación.</string>

    <!-- ACTIVATION FRAGMENT STRINGS -->
    <string name="text_activation_hello">Activation!</string>
    <string name="btn_service_activation">Start service</string>
    <string name="btn_service_deactivation">Stop service</string>


    <!-- RESERVATIONS FRAGMENT STRINGS -->
    <string name="text_reservations_hello">Reservations!</string>

    <!-- NOTIFICATIONS FRAGMENT STRINGS -->
    <string name="text_notifications_hello">Notifications!</string>


    <!-- DETAIL FRAGMENT STRINGS -->
    <string name="detail_fragment_start_btn">Start</string>
    <string name="detail_fragment_finish_btn">Finish</string>
    <string name="detail_fragment_finished_status">Finished</string>
    <string name="detail_fragment_cancel_btn">Cancel</string>
    <string name="detail_fragment_notify_btn">Notify All</string>

    <!-- LOTTIE STRINGS -->

    <string name="lottie_fragment_reservations_part1"><b>Loading data from server</b>  </string>
    <string name="lottie_fragment_reservations_part2">Please wait</string>


    <!-- Reservation cardview (list_row_reservation)-->
    <string name="reservation_id">Reservation ID</string>
    <string name="date">Date</string>
    <string name="status">Round Status</string>
    <string name="reservation_count">Reservation Count</string>
    <string name="round">Round</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="two_format_string">%1$s %2$s</string>
    <string name="reservation_number"> 1</string>
    <string name="reservation_result"><b>Your round number</b></string>

    <!-- ACTIVATION FRAGMENT XML STRINGS -->

    <string name="txt_activate_service">Reservation Activation</string>
    <string name="txt_reservations_schedule">Reservation Schedules</string>
    <string name="btn_activate_reservations">Iniciar</string>


    <string-array name="schedule">
        <item>7:00am - 9:00am</item>
        <item>4:00pm - 6:00pm</item>


    </string-array>


    <!-- GEOFENCE STRINGS-->


    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!-- Firebase NOTIFICATIONS STRINGS-->


    <string name="quickstart_message">Click the SUBSCRIBE TO SERVICE button below to subscribe to the
        SERVICE topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Service</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to service topic</string>
    <string name="fcm_message">FCM Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_information">Horarios especificados para  los viajes desde el parqueo  hasta unicomer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_notify_button">Notificar a Todos</string>
    <string name="text_start_button">Iniciar</string>
    <string name="text_finish_button">Regresar</string>

    <string name="text_cancel_confirmationFragment">cancelar</string>
    <string name="text_iniciar_confirmationFragment">iniciar</string>
    <string name="text_round_list">Vuelta #</string>
    <string name="text_passengers_list">Numero de pasajeros</string>
    <!-- LOGIN STRINGS -->
    <string name="name_app">InDrive</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="txt_dialog">¿Seguro que desea cerrar sesión?</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="cerrar_sesion">cerrar_sesion</string>

</resources>
