<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container_fragments"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/container_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/unicomer_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="255dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/container_layout_activation"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/input_nav_button"
            android:orientation="vertical" >

            <ImageView
                android:layout_margin="9dp"
                android:id="@+id/image_view_nav_activation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_power" />

            <TextView
                android:id="@+id/text_view_nav_activation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/actor"
                android:text="@string/text_nav_activation"
                android:textAlignment="center"
                android:textColor="@color/unicomer_white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_layout_reservation"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/input_nav_button"
            android:orientation="vertical" >

            <ImageView
                android:layout_margin="9dp"
                android:id="@+id/image_view_nav_reservation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_document" />

            <TextView
                android:id="@+id/text_view_nav_reservation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/actor"
                android:text="@string/text_nav_rounds"
                android:textAlignment="center"
                android:textColor="@color/unicomer_white" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/container_layout_notifications"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/input_nav_button"
            android:orientation="vertical">

            <ImageView
                android:layout_margin="9dp"
                android:id="@+id/image_view_nav_notifications"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_clock_1" />

            <TextView
                android:id="@+id/text_view_nav_notifications"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/actor"
                android:text="@string/text_nav_history"
                android:textAlignment="center"
                android:textColor="@color/unicomer_white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>