<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_color"
        android:backgroundTint="@color/colorPrimaryDark"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:clickable="true"
            android:id="@+id/item_container_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:srcCompat="@drawable/ic_right_arrowhead_in_a_circle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/test1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/idTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:focusable="true"
                    android:fontFamily="@font/abel"
                    android:text="@string/reservation_id"
                    android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:textSize="30sp"
                    android:id="@+id/statusTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/abel"
                    android:text="@string/status"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />


                <TextView
                    android:id="@+id/countTxt"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/abel"
                    android:text="@string/reservation_count"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <!--<TextView
                    android:id="@+id/roundTxt"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/abel"
                    android:text="@string/round"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />-->

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>