<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Vuelta # "
            android:textColor="#1e53a8"
            android:textSize="35sp" />

        <TextView
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="1"
            android:textColor="@color/unicomer_black"
            android:textSize="35sp" />

=======
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unicomer_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/unicomer_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/amaranth"
            android:text="Viaje n. 1"
            android:textAlignment="center"
            android:textSize="45sp" />
>>>>>>> f5f3247cb1aff0f6912b653a69b1869ba8d11098

    </LinearLayout>

    <LinearLayout
<<<<<<< HEAD
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/ic_right_arrowhead_in_a_circle"
            android:textColor="#8b93a0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat"
            android:text="Numero de pasajeros  "
            android:textSize="19sp" />

        <TextView
            android:textSize="19sp"
            android:gravity="center_vertical"
            android:textColor="#8b93a0"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11 pasajeros"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8b93a0" />

    <TextView

        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:drawablePadding="35dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_user_symbol"
        android:textColor="#8b93a0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Jose Aguilar"
        android:textSize="19sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="35dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_user_symbol"
        android:textColor="#8b93a0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Jose Aguilar"
        android:textSize="19sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="35dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_user_symbol"
        android:textColor="#8b93a0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Jose Aguilar"
        android:textSize="19sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="35dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_user_symbol"
        android:textColor="#8b93a0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Jose Aguilar"
        android:textSize="19sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="35dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_user_symbol"
        android:textColor="#8b93a0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Jose Aguilar"
        android:textSize="19sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawablePadding="35dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_user_symbol"
        android:textColor="#8b93a0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Jose Aguilar"
        android:textSize="19sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_notify_button"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/text_notify_button"
        android:textColor="@color/colorAccent" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/input_start_button"
                android:fontFamily="@font/montserrat"
                android:padding="15dp"
                android:text="@string/text_start_button"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/input_stop_button"
                android:fontFamily="@font/montserrat"
                android:padding="15dp"
                android:text="@string/text_finish_button"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </LinearLayout>
=======
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="35dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="340dp"
                android:background="@drawable/input_nav_button"
                android:text="@string/text_iniciar_confirmationFragment"
                android:textColor="@color/unicomer_white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="340dp"
                android:background="@drawable/input_nav_button"
                android:text="@string/text_cancel_confirmationFragment"
                android:textColor="@color/unicomer_white" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

>>>>>>> f5f3247cb1aff0f6912b653a69b1869ba8d11098
</LinearLayout>